# ChangeLog for app-text/zekr
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Sep 2008; Serkan Kaba <serkan@gentoo.org>
  -files/zekr-0.6.6-resource-fixes.patch, -zekr-0.7.0_beta1-r3.ebuild,
  -files/zekr-0.7.0_beta1-buildfix.patch, +zekr-0.7.1.ebuild:
  Version bump.

  20 Apr 2008; Serkan Kaba <serkan_kaba@yahoo.com>
  zekr-0.7.0_beta1-r3.ebuild:
  Fix repoman warnings

  20 Apr 2008; Serkan Kaba <serkan_kaba@yahoo.com> -zekr-0.7.0_beta1-r2.ebuild,
  +zekr-0.7.0_beta1-r3.ebuild:
  Revbump to update translations.

  19 Apr 2008; Serkan Kaba <serkan_kaba@yahoo.com> -zekr-0.7.0_beta1-r1.ebuild,
  +zekr-0.7.0_beta1-r2.ebuild:
  Revbump to add translations.

  03 Apr 2008; Vlastimil Babka <caster@gentoo.org> ++,
  -zekr-0.7.0_beta1.ebuild:
  Revbump to use new swt slot.

  01 Apr 2008; Serkan Kaba <serkan_kaba@yahoo.com> -zekr-0.6.6.ebuild, -files/zekr-0.6.6-buildfix.patch,
  +zekr-0.7.0_beta1.ebuild, +files/zekr-0.7.0_beta1-buildfix.patch:
  Version bump

  25 Jan 2008; Petteri Räty <betelgeuse@gentoo.org> zekr-0.6.6.ebuild:
  Migrate to SLOT deps.

  30 Sep 2007; <serkan_kaba@yahoo.com>
  Version bump. Add support for extra translations.
  
  20 Jun 2007; <serkan_kaba@yahoo.com> zekr-0.6.0_beta1.ebuild:
  Extend swt built-with-use check also to firefox flag.

  26 May 2007; <serkan_kaba@yahoo.com> zekr-0.6.0_beta1.ebuild:
  Use the recent swt for MOZILLA_FIVE_HOME detection, fix license and remove
  all bundled jars.

  06 May 2007; <serkan_kaba@yahoo.com> +zekr-0.6.0_beta1.ebuild:
  Version bump

  29 Apr 2007; Serkan Kaba <serkan_kaba@yahoo.com> zekr-0.5.0.ebuild:
  Added runtime swt USE flag checking.

  23 Apr 2007; Serkan Kaba <serkan_kaba@yahoo.com> zekr-0.5.0.ebuild:
  Initial commit.