@@ -28,6 +28,6 @@ DIST zekr-quran-translation-tt-noghmani_0.7.3-1_all.deb 488524 RMD160 3304630fc9
 DIST zekr-quran-translation-ur-irfanulquran_0.7.3-1_all.deb 460556 RMD160 5f27408fc5f3ff2d8f602f045e7106724ce190f4 SHA1 11cdbf34519bf82a8d936ccbe8e509e1d8b9f4c5 SHA256 dc848e49a9af24f865ab7c7299b849209e46024e38395a5d2baa45bd2321c864
 DIST zekr-quran-translation-ur-jalandhry_0.7.3-1_all.deb 355308 RMD160 fccfe1ade960b8c0c87c56a99c456ff34f3e5bfc SHA1 e7271ec437e107c8d0369040b749262eec21b244 SHA256 0ab295b793ee7c3d9b86e8fcda78bb5b1a26cb929e6c1283a5eb7803ffc67a2c
 DIST zekr-quran-translation-ur-kanzuliman_0.7.3-1_all.deb 332564 RMD160 24c515e30d95f51210932c3be5a4dbad332a4fb1 SHA1 cd917c6a91a43d717409dff4b9a812c1afa4d35d SHA256 b23953f29f5e9e5af34ec2b0e518b64f1c93bdae4d238e0268482f74332a2e6c
-EBUILD zekr-0.7.1.ebuild 4063 RMD160 f23749c8491ba17ba702bb2e64ad88f075c1e424 SHA1 e3b0172af6fea0632a15a6d06cb6c6a6fcfeb6a2 SHA256 8fc292130952f520a3d0616ec38961773df15078564564305dbbf3e43a64940f
-MISC ChangeLog 1762 RMD160 b32cdcc28293f3c117974a15acd8a402838024b1 SHA1 924e2e16e38061efa47788081a7446276cdb3fba SHA256 ba54a5e53ca35ab341d3a29dd01036e533cc188fa4fef5d9fab58675818c5892
+EBUILD zekr-0.7.1.ebuild 4015 RMD160 d06089b4d69d2e22b56dc5e059f1c2c0ac7cc033 SHA1 b5f2d87764619f41ec125165bdefcc5dac4c81f7 SHA256 7595304e8b0e254d1061a4d89a59e834aecbbff39e1279726774e5cac208c9aa
+MISC ChangeLog 1834 RMD160 7849265f9c160bfcbc597e29849b0a5c0e45d00f SHA1 9376d6deaa4f13025362783998017710812b8895 SHA256 00468808ff0918d11201f0f7def7a58d2b8d6f2db19901e33aaabe0ca1f716ec
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
